argocd/waiter/bacchus-howto/resources.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bacchus-howto
spec:
  hostnames:
    - test.howto.bacchus.io #howto.bacchus.io
  parentRefs:
    - namespace: cilium-system
      name: web-gateway
      sectionName: https-snucse-org # should I change it?
  rules:
    - backendRefs:
        - name: bacchus-howto
          port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bacchus-howto
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bacchus-howto
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: caddy
          image: caddy:latest
          volumeMounts:
            - name: caddy-config
              subPath: Caddyfile
              mountPath: /etc/caddy/Caddyfile
              readOnly: true
            - name: packages
              mountPath: /srv/repos
          ports:
            - name: http-caddy
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              port: 8080
          readinessProbe:
            httpGet:
              port: 8080
      volumes:
        - name: caddy-config
          configMap:
            name: bacchus-howto-caddy-config
  volumeClaimTemplates:
  - metadata:
      name: packages
    spec:
      accessModes:
        - ReadWriteOncePod
      resources:
        requests:
          storage: 1Gi
